<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/select"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Spinner
        android:id="@+id/products"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"></Spinner>

    <LinearLayout
        android:padding="@dimen/fab_margin"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            style="@style/TextAppearance.AppCompat.Large"
            android:id="@+id/subtotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <com.hrules.horizontalnumberpicker.HorizontalNumberPicker
            style="@style/TextAppearance.AppCompat.Large"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/quantity"/>

    </LinearLayout>

</LinearLayout>
