<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:id="@+id/edit"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:padding="@dimen/fab_margin"
        style="@style/TextAppearance.AppCompat.Large"
        android:id="@+id/product"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"></TextView>

    <RelativeLayout
        android:gravity="center_vertical"
        android:padding="@dimen/fab_margin"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            style="@style/TextAppearance.AppCompat.Large"
            android:id="@+id/subtotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <com.hrules.horizontalnumberpicker.HorizontalNumberPicker
            android:layout_toRightOf="@id/subtotal"
            style="@style/TextAppearance.AppCompat.Large"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/quantity"/>
        <ImageView
            android:layout_alignParentEnd="true"
            android:id="@+id/delete"
            android:src="@drawable/ic_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </RelativeLayout>

</LinearLayout>
